# traceforge-otel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
examples/: cost-model.example.json  demo-agent.otlp.json  support-agent.jsonl
src/traceforge/: __init__.py  __main__.py  analyzer.py  cli.py  costs.py  demo.py  models.py  parser.py  reports.py
tests/: test_analyzer.py  test_cli.py  test_costs.py  test_parser.py  test_reports.py
