[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "traceforge-otel"
version = "0.1.0"
description = "A local-first CLI for turning OpenTelemetry AI-agent traces into actionable performance, reliability, and cost insights."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "abc123dx" }]
keywords = [
  "ai-agents",
  "genai",
  "observability",
  "opentelemetry",
  "otlp",
  "tracing",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Debuggers",
  "Typing :: Typed",
]
dependencies = [
  "rich>=13.7,<16",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8.2,<9",
  "ruff>=0.6,<1",
]

[project.scripts]
traceforge = "traceforge.cli:app"

[project.urls]
Homepage = "https://github.com/abc123dx/traceforge-otel"
Issues = "https://github.com/abc123dx/traceforge-otel/issues"
Repository = "https://github.com/abc123dx/traceforge-otel"

[tool.hatch.build.targets.wheel]
packages = ["src/traceforge"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/examples",
  "/README.md",
  "/LICENSE",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
pretty = true
show_error_codes = true
