[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "traceforge-otel"
version = "0.1.1"
description = "中文 Local-first OpenTelemetry Agent 轨迹诊断 CLI：分析延迟、关键路径、工具错误、重试、Token 与成本。"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "abc123dx" }]
keywords = [
  "ai-agents",
  "genai",
  "observability",
  "opentelemetry",
  "otlp",
  "tracing",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Debuggers",
  "Typing :: Typed",
]
dependencies = [
  "rich>=13.7,<15",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=9.0.3,<10",
  "ruff>=0.6,<1",
]

[project.scripts]
traceforge = "traceforge.cli:app"

[project.urls]
Homepage = "https://github.com/abc123dx/traceforge-otel"
Issues = "https://github.com/abc123dx/traceforge-otel/issues"
Repository = "https://github.com/abc123dx/traceforge-otel"

[tool.hatch.build.targets.wheel]
packages = ["src/traceforge"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/examples",
  "/README.md",
  "/LICENSE",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
allowed-confusables = ["，", "。", "：", "；", "！", "？", "（", "）", "、"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
pretty = true
show_error_codes = true
